# score-sort

./: .gitignore  LICENSE  README.md  pyproject.toml  rom_rating_sorter.py
src/score_sort/: __init__.py  cli.py  core.py
tests/: test_rom_rating_sorter.py  test_score_sort.py
