[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "score-sort"
version = "0.1.0"
description = "Sort media directory items by Metacritic scores."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["rich>=13.7"]

[project.scripts]
score-sort = "score_sort.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
